# resolute

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .renovaterc.json5  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: lint.yaml  manifests.yaml  release-please.yaml  release.yaml  renovate.yaml  scan.yaml  stale.yaml  tests.yaml
.mise/: config.toml
config/: config.example.yaml
deploy/kubernetes/: ks.yaml
deploy/kubernetes/app/: externalsecret.yaml  helmrelease.yaml  kustomization.yaml  ocirepository.yaml  policy.yaml  pvc.yaml
docs/: acceptance-checklist.md  api-examples.md  architecture.md  build-notes.md  calibration.md  deployment.md  rollout.md
docs/adr/: 0001-seerr-integration-strategy.md  0002-downgrade-executor-and-worth-endpoint.md
fixtures/evidence/: tmdb_114478.json  tmdb_136315.json  tmdb_1668.json  tmdb_68595.json  tmdb_95396.json
fixtures/golden/: expectations.json
fixtures/seerr/: request_detail.json  service_sonarr_detail.json  tv_details_severance.json  webhook_media_pending.json  webhook_movie_pending.json
fixtures/sonarr/: quality_profiles.json  series_severance.json
scripts/: k8s-smoke.sh  kubeconform.sh
src/resolute/: __init__.py  cli.py  config.py  executor.py  ids.py  runtime.py
src/resolute/api/: app.py
src/tv_decider/: __init__.py  cli.py  config.py  executor.py  runtime.py
tests/: conftest.py  test_api.py  test_api_hardening.py  test_cli.py  test_config.py  test_downgrade.py  test_engine.py  test_evidence_source.py  test_executor.py  test_guardrails.py  test_judge.py  test_planner.py  test_policy_scoring.py  test_seerr_client.py  test_sonarr_audit.py  test_store.py  test_webhook_normalizer.py
(+29 files in other folders)
